--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-{% if post %}Редактировать запись{% else %}Добавить запись{% endif %}
+  {% if post %}Редактировать запись{% else %}Добавить запись{% endif %}
 {% endblock %}
 {% block content %}
   {% load user_filters %}
@@ -25,7 +25,14 @@
               </div>
             {% endfor %}
           {% endif %}
-          <form method="post" action="{% if post %}{% url 'posts:post_edit' post.pk %}{% else %}{% url 'posts:post_create' %}{% endif %}">
+          <form method="post"
+            action=
+              "{% if post %}
+                {% url 'posts:post_edit' post.pk %}
+              {% else %}
+                {% url 'posts:post_create' %}
+              {% endif %}"
+          >
             {% csrf_token %}
             {% for field in form %}
               <div class="form-group row my-3 p-3">
