--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -25,7 +25,7 @@
               </div>
             {% endfor %}
           {% endif %}
-          <form method="post" enctype="multipart/form-data"
+          <form method="post"
             action=
               "{% if post %}
                 {% url 'posts:post_edit' post.pk %}
